fix: modal overflow, accordion padding, sortable

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,14 @@
   border-collapse: collapse;
 }
 
+.modal-dialog {
+  overflow-y: initial !important;
+}
+.modal-body-overflow {
+  height: 75vh;
+  overflow-y: auto;
+}
+
 .table-small thead th,
 .table-small tbody td {
   text-align: center;
